test/compile_fail/main_not_returning_int.pine
# error: failed to unify
def main do
  "not an int"
end
